@@ -1,3 +1,13 @@
+2021-11-10  Antti Koivisto  <antti@apple.com>
+
+        Hasher should be able to hash pointers
+        https://bugs.webkit.org/show_bug.cgi?id=232927
+
+        Reviewed by Kimmo Kinnunen.
+
+        * TestWebKitAPI/Tests/WTF/Hasher.cpp:
+        (TestWebKitAPI::TEST):
+
 2021-11-09  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r285536.
